--- a/demo/index.html
+++ b/demo/index.html
@@ -24,7 +24,7 @@
       <button id="increment">+ increment id</button>
     </div>
     <div class="section">
-      <h4>Network calls url - fetch intercept</h4>
+      <h4>Number of network calls url and url - fetch intercept</h4>
       <ol id="fetch-urls"></ol>
     </div>
 
